@@ -1607,3 +1607,10 @@ Fri Sep 10 16:36:32 PDT 1999
 (Raster)
 
 and dont let fixed position windows move.. :)
+
+-------------------------------------------------------------------------------
+
+Fri Sep 10 17:47:28 PDT 1999
+(Raster)
+
+and get commands form the first window for a group only :)
